2002-05-30  Jody Goldberg <jody@gnome.org>

	* gnome-settings-keyboard.c (xkb_set_keyboard_autorepeat_rate) : Add
	  some bounds checking.

Wed May 29 20:23:13 2002  Jonathan Blandford  <jrb@redhat.com>

	* Makefile.am: Add gnome-settings-keybinding
	* gnome-settings-daemon.c: (gnome_settings_daemon_new): initialize
	keybindings support
	* gnome-settings-keybindings.[ch]: Patch to add support for custom
	keybindings.  Thanks to Erwann Chenede <Erwann.Chenede@sun.com>
	for the patch.

2002-05-22  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf) :
	  disable some debug spew.
	(set_gconf_from_server) : ditto.

2002-05-22  jacob berkman  <jacob@ximian.com>

	* gnome-settings-font.c (load_cursor): run the mkfontdir command
	synchronously to avoid a possible race.  extra precaution for
	#78023

	* gnome-settings-daemon.c (gnome_settings_daemon_new): run
	background settings after everything else, as some of those spawn
	processes (xscreensaver) and background settings nices itself

	should fix #78742

	* factory.c (main): quit when we get the die signal from the SM

2002-05-16  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=80325
	* gnome-settings-keyboard.c (apply_settings) : although we may not be
	  able to support the autorepeat rate setting we can enable/disable
	  autorepeat.

2002-05-16  jacob berkman  <jacob@ximian.com>

	* gnome-settings-keyboard.c (apply_settings): load from the
	correct key for whether the bell should be on or not
	(apply_settings): pass the right flags to XChangeKeyboardControl()

	fixes #78016 and 78015

	* Makefile.am:
	* gnome-settings-default-editor.[ch]: keep text/plain and text*
	using the same mime type (#78037)

	* gnome-settings-daemon.c (gnome_settings_daemon_new): load editor
	and keyboard settings (bugs #78037 and #78016)

Tue May 14 14:50:34 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-*.c: Remove all debug print statements, #76085
