@@ -1,3 +1,10 @@
+2002-06-06 Erwann Chenede - <erwann.chenede@sun.com>
+
+       * gnome-settings-keybindings.c (keybindings_filter) :
+         do not quit gnome-settings-daemon when pressing Ok 
+	 when the warning dialog appears. fix bug #84364
+	 Added localization hooks.
+	 
 2002-05-30  Jody Goldberg <jody@gnome.org>
 
 	* gnome-settings-keyboard.c (xkb_set_keyboard_autorepeat_rate) : Add
